# ggpy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/ggpy/: __about__.py  __init__.py  fourier.py  gp.py  kernel.py
tests/: __init__.py  test_gp.py  test_sample.py
